# dangerzone-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: cosign.rs  lib.rs  main.rs  ocr.rs  python.rs  registry.rs  util.rs
tests/: integration_test.rs  test_cosign.rs
tests/assets/signatures/: README.md
tests/python_bindings/: conftest.py  test_bindings.py
