[package]
name = "dangerzone-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dangerzone_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dangerzone-rs"
path = "src/main.rs"

[features]
default = []
python = ["pyo3"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
flate2 = "1.0"
kreuzberg-tesseract = { version = "4.9", default-features = false, features = ["static-linking"] }
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py312"], optional = true }
unicode-general-category = "1.1.0"

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.4"
rayon = "1.8"
