[package]
name = "dangerzone-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dangerzone_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dangerzone-rs"
path = "src/main.rs"

[features]
default = []
python = ["pyo3"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
flate2 = "1.0"
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py312"], optional = true }
unicode-general-category = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
sigstore = { version = "0.13.0", default-features = false }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.4"
rayon = "1.8"
rand_core = { version = "0.6", features = ["getrandom"] }
p256 = { version = "0.13.2", features = ["pkcs8", "pem", "ecdsa"] }
